# cmdbsyncer_inventory

./: LICENSE  MANIFEST.in  README.md  build.sh  example-inventory.yml  galaxy.yml  inventory.yml  pyproject.toml  requirements.txt
cmdbsyncer_inventory/: __init__.py  __main__.py
cmdbsyncer_inventory/inventory_plugins/: __init__.py  cmdbsyncer_inventory.py
plugin/: cmdbsyncer_inventory.py
